--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>
       SoicalEditor --simple editor to create and publish social media posts
     </title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <p>hi</p>
