--- a/index.html
+++ b/index.html
@@ -4,12 +4,51 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <img
+      class="logo"
+      src="https://bytegrad.com/course-assets/css/1/logo.svg"
+      alt="Logo"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/lato-font/3.0.0/css/lato-font.min.css"
+      integrity="sha512-rSWTr6dChYCbhpHaT1hg2tf4re2jUxBWTuZbujxKg96+T87KQJriMzBzW5aqcb8jmzBhhNSx4XYGA6/Y+ok1vQ=="
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>
       SoicalEditor --simple editor to create and publish social media posts
     </title>
-    <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <p>hi</p>
+  <body class="app">
+    <header class="header">
+      <img
+        class="logo"
+        src="https://bytegrad.com/course-assets/css/1/logo.svg"
+        alt="Logo"
+      />
+      <button class="dd-toggle">File</button>
+      <button class="dd-toggle">View</button>
+      <button class="dd-toggle">New</button>
+
+      <button class="dd-toggle">
+        <i class="fas fa-crow dd-toggle__icon"></i>
+      </button>
+      <button class="dd-toggle">
+        <i class="fas fa-bell dd-toggle__icon"></i>
+      </button>
+      <button class="dd-toggle">
+        <img src="./logo1.png" alt="" class="dd-toggle__img" />
+        <span class="dd-toggle__text">Chormun L.</span>
+      </button>
+    </header>
   </body>
 </html>
